--- a/index.html
+++ b/index.html
@@ -1,38 +1,145 @@
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>The Round Earth Society</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <style>
+    :root {
+      --bg: #b0c4de;        /* light steel blue */
+      --card: #ffffff;
+      --text: #0f172a;
+      --muted: #475569;
+      --accent: #1e3a8a;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #b0c4de; /* light steel blue */
-      color: #0f172a;
+      background: linear-gradient(180deg, #b0c4de 0%, #d6e2f0 100%);
+      color: var(--text);
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-    }
-    .card {
-      background: white;
       padding: 2rem;
-      border-radius: 12px;
-      max-width: 640px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.15);
+    }
+
+    .card {
+      background: var(--card);
+      max-width: 820px;
+      width: 100%;
+      padding: 2.5rem;
+      border-radius: 18px;
+      box-shadow: 0 20px 50px rgba(0,0,0,.18);
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 2.4rem;
+      letter-spacing: -0.02em;
+    }
+
+    .tagline {
+      margin-top: 0.75rem;
+      color: var(--muted);
+      font-size: 1.1rem;
+    }
+
+    .video-wrapper {
+      margin: 2.5rem 0;
+      border-radius: 14px;
+      overflow: hidden;
+      background: #000;
+    }
+
+    video {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    section {
+      margin-top: 2rem;
       text-align: center;
     }
-    h1 {
+
+    .description {
+      font-size: 1.05rem;
+      line-height: 1.6;
+      max-width: 640px;
+      margin: 0 auto 2rem auto;
+      color: var(--text);
+    }
+
+    .signup {
+      background: #f8fafc;
+      padding: 1.75rem;
+      border-radius: 14px;
+      border: 1px solid #e2e8f0;
+    }
+
+    .signup h2 {
       margin-top: 0;
+      font-size: 1.4rem;
+    }
+
+    .signup p {
+      margin-bottom: 1.25rem;
+      color: var(--muted);
+    }
+
+    footer {
+      margin-top: 2.5rem;
+      text-align: center;
+      font-size: 0.85rem;
+      color: var(--muted);
     }
   </style>
 </head>
+
 <body>
-  <div class="card">
-    <h1>The Round Earth Society</h1>
-    <p>Satirical parody content across short-form and long-form video.</p>
-    <p>If you can see this, GitHub Pages is working 🎉</p>
-  </div>
-</body>
-</html>
+  <main class="card">
+
+    <header>
+      <h1>The Round Earth Society</h1>
+      <p class="tagline">
+        Satirical parody content for people who enjoy music, chaos, and bad ideas executed sincerely.
+      </p>
+    </header>
+
+    <!-- TRAILER VIDEO -->
+    <div class="video-wrapper">
+      <video controls preload="metadata" poster="poster.jpg">
+        <source src="trailer.mp4" type="video/mp4">
+        Sorry — your browser doesn’t support embedded video.
+      </video>
+    </div>
+
+    <section>
+      <p class="description">
+        The Round Earth Society is a parody project exploring music, comedy,
+        and cultural nonsense across multiple formats.
+        If you’ve found your way here, you’re probably already one of us.
+      </p>
+
+      <!-- EMAIL SIGNUP -->
+      <div class="signup">
+        <h2>Join the Society</h2>
+        <p>
+          Occasional updates. Early releases. No spam.
+        </p>
+
+        <!-- EMAIL EMBED GOES HERE -->
+        <
