--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,11 +7,10 @@
 
   <style>
     :root {
-      --bg: #b0c4de;        /* light steel blue */
-      --card: #ffffff;
-      --text: #0f172a;
+      --ink: #0f172a;
       --muted: #475569;
       --accent: #1e3a8a;
+      --card: #ffffff;
     }
 
     * {
@@ -22,124 +20,159 @@
     body {
       margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: linear-gradient(180deg, #b0c4de 0%, #d6e2f0 100%);
-      color: var(--text);
-      min-height: 100vh;
+      color: var(--ink);
+      background:
+        repeating-linear-gradient(
+          45deg,
+          #c7d6ea,
+          #c7d6ea 20px,
+          #dbe6f3 20px,
+          #dbe6f3 40px
+        );
+    }
+
+    /* HERO */
+    .hero {
+      position: relative;
+      height: 60vh;
+      min-height: 380px;
+      background: url("hero.jpg") center / cover no-repeat;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 2rem;
+      align-items: flex-end;
     }
 
-    .card {
-      background: var(--card);
-      max-width: 820px;
-      width: 100%;
+    .hero::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        to top,
+        rgba(15, 23, 42, 0.75),
+        rgba(15, 23, 42, 0.15),
+        rgba(15, 23, 42, 0)
+      );
+    }
+
+    .hero-content {
+      position: relative;
       padding: 2.5rem;
-      border-radius: 18px;
-      box-shadow: 0 20px 50px rgba(0,0,0,.18);
+      max-width: 960px;
+      width: 100%;
+      margin: 0 auto;
+      color: white;
     }
 
-    header {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 2.4rem;
+    .logo {
+      font-size: 2.6rem;
+      font-weight: 800;
       letter-spacing: -0.02em;
+      margin: 0;
     }
 
     .tagline {
       margin-top: 0.75rem;
-      color: var(--muted);
-      font-size: 1.1rem;
+      font-size: 1.15rem;
+      color: #e2e8f0;
+      max-width: 640px;
     }
 
+    /* MAIN CARD */
+    main {
+      max-width: 960px;
+      margin: -4rem auto 4rem auto;
+      padding: 0 1.5rem;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 20px;
+      padding: 2.75rem;
+      box-shadow: 0 30px 70px rgba(0,0,0,.25);
+    }
+
+    /* VIDEO */
     .video-wrapper {
-      margin: 2.5rem 0;
-      border-radius: 14px;
+      border-radius: 16px;
       overflow: hidden;
       background: #000;
+      margin-bottom: 2.5rem;
     }
 
     video {
       width: 100%;
-      height: auto;
       display: block;
     }
 
-    section {
-      margin-top: 2rem;
-      text-align: center;
-    }
-
+    /* TEXT */
     .description {
       font-size: 1.05rem;
-      line-height: 1.6;
-      max-width: 640px;
-      margin: 0 auto 2rem auto;
-      color: var(--text);
-    }
-
-    .signup {
-      background: #f8fafc;
-      padding: 1.75rem;
-      border-radius: 14px;
-      border: 1px solid #e2e8f0;
-    }
-
-    .signup h2 {
-      margin-top: 0;
-      font-size: 1.4rem;
-    }
-
-    .signup p {
-      margin-bottom: 1.25rem;
-      color: var(--muted);
+      line-height: 1.65;
+      color: var(--ink);
+      max-width: 720px;
+      margin: 0 auto;
+      text-align: center;
     }
 
     footer {
-      margin-top: 2.5rem;
       text-align: center;
+      padding: 3rem 1rem;
       font-size: 0.85rem;
       color: var(--muted);
+    }
+
+    @media (max-width: 640px) {
+      .logo {
+        font-size: 2rem;
+      }
+      .hero {
+        height: 50vh;
+      }
+      .card {
+        padding: 2rem;
+      }
     }
   </style>
 </head>
 
 <body>
-  <main class="card">
 
-    <header>
-      <h1>The Round Earth Society</h1>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div class="hero-content">
+      <!-- If you later add logo.png, you can replace this h1 with an <img> -->
+      <h1 class="logo">The Round Earth Society</h1>
       <p class="tagline">
-        Satirical parody content for people who enjoy music, chaos, and bad ideas executed sincerely.
+        Satirical parody content for people who enjoy music, chaos,
+        and bad ideas executed sincerely.
       </p>
-    </header>
-
-    <!-- TRAILER VIDEO -->
-    <div class="video-wrapper">
-      <video controls preload="metadata" poster="poster.jpg">
-        <source src="trailer.mp4" type="video/mp4">
-        Sorry — your browser doesn’t support embedded video.
-      </video>
     </div>
+  </section>
 
-    <section>
+  <!-- MAIN CONTENT -->
+  <main>
+    <div class="card">
+
+      <!-- TRAILER -->
+      <div class="video-wrapper">
+        <video controls preload="metadata" poster="poster.jpg">
+          <source src="trailer.mp4" type="video/mp4">
+          Your browser doesn’t support embedded video.
+        </video>
+      </div>
+
+      <!-- DESCRIPTION -->
       <p class="description">
-        The Round Earth Society is a parody project exploring music, comedy,
-        and cultural nonsense across multiple formats.
+        The Round Earth Society is a parody project exploring music,
+        comedy, and cultural nonsense across multiple formats.
         If you’ve found your way here, you’re probably already one of us.
       </p>
 
-      <!-- EMAIL SIGNUP -->
-      <div class="signup">
-        <h2>Join the Society</h2>
-        <p>
-          Occasional updates. Early releases. No spam.
-        </p>
+    </div>
+  </main>
 
-        <!-- EMAIL EMBED GOES HERE -->
-        <
+  <footer>
+    © The Round Earth Society
+  </footer>
+
+</body>
+</html>
